--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Install Flutter
         run: git clone https://github.com/flutter/flutter.git
 
+      - name: set version
+        run: flutter/bin/flutter version 2.0.6
+
       # PATH を通す
       - name: Add path
         run: echo "$(pwd)/flutter/bin" >> $GITHUB_PATH
