--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,17 +21,21 @@ environment:
   sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  # For Architecture
+  flutter_hooks: ^0.17.0
+  hooks_riverpod: ^0.14.0+4
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  pedantic_mono: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
